--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "serve dist -l 3000"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
