--- a/foundry.toml
+++ b/foundry.toml
@@ -3,23 +3,8 @@ src = "contracts"
 out = "out"
 libs = ["node_modules"]
 solc = "0.8.20"
-
-# Dependencies
-remappings = [
-    "@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/",
-    "@chainlink/contracts/=node_modules/@chainlink/contracts/",
-    "forge-std/=lib/forge-std/src/",
-]
-
-# Compiler settings
 optimizer = true
 optimizer_runs = 200
-via_ir = false
 
-# Testing
-verbosity = 3
-fuzz = { runs = 256 }
-
-[profile.ci]
-verbosity = 4
-fuzz = { runs = 1000 }
+[rpc_endpoints]
+sepolia = "https://ethereum-sepolia-rpc.publicnode.com"
